# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  linter.yml  run-lint.yml  test.yml
gendiff/: __init__.py  gendiff.py  parser_files.py
gendiff/lib/: cli.py  diff.py  format.py  input_data.py  input_parser.py
gendiff/lib/formaters/: json.py  my_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_constatn.py  test_gendiff.py
tests/fixtures/: test_file1_2.txt
tests/fixtures/plain/: test_json.txt  test_yaml.txt
tests/fixtures/render/: test_json.txt
tests/fixtures/stylish/: test_json.txt  test_yaml.txt
