[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference calculator"
authors = ["Olemskoy Michael <desed@mail.ru>"]
packages = [
    { include = "gendiff" }
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python"
]

[tool.poetry.urls]
"GitHub" = "https://github.com/SoulH0unD/python-project-lvl2/"

[tool.poetry.dependencies]
python = "^3.8"
pyyml = "^0.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
